Bug 441308 - Activation feels too slow
Summary: Activation feels too slow
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-21 16:34 UTC by Nate Graham
Modified: 2021-08-26 16:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-08-21 16:34:13 UTC
By easing both in and out, the window movement feels slow when the effect is invoked. I would recommend only easing out.
Comment 1 David Edmundson 2021-08-21 23:46:33 UTC
HIG says if an item moves but stays visible to ease both in and out.

https://develop.kde.org/hig/style/animations/
Comment 2 Nate Graham 2021-08-23 00:46:35 UTC
It does, but in this case using an ease-in just doesn't feel right to me. It makes the overall effect feel sluggish and unresponsive, like it took half a second to respond to your keypress.

How does it feel to you?
Comment 3 Felipe Kinoshita 2021-08-24 01:33:01 UTC
IMO current easing type feels nice to me, it feeling sluggish and unresponsive seems to come from some other factor.
Comment 4 Nate Graham 2021-08-24 15:12:28 UTC
Maybe it's just a bit too slow...
Comment 5 Nate Graham 2021-08-24 16:20:01 UTC
Indeed. The duration is 300, which simply matches the existing hardcoded duration of the old Present Windows effect. This should be using a standard PlasmaCore.Units duration value, such as longDuration (200ms). Now it all makes sense for why it feels slow since the ease-in+ease-out behavior is calibrated for a fast overall duration, not a slow one. So the old 300ms with no ease-in feels faster than 300ms with an ease-in+ease-out. 200ms with an ease-in+ease-out feels a lot better in my testing.

I'll work on a patch.
Comment 6 David Edmundson 2021-08-24 21:08:41 UTC
>Maybe it's just a bit too slow...

It is currently set to a much higher value than the old effect
Comment 7 Nate Graham 2021-08-24 21:39:20 UTC
I guess that would explain it. Any reason why?
Comment 8 Bug Janitor Service 2021-08-26 15:14:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1312
Comment 9 Nate Graham 2021-08-26 16:16:04 UTC
Git commit 205fb923cb8e1cbc0d26edc5a2ce37784ac32b41 by Nate Graham.
Committed on 26/08/2021 at 16:15.
Pushed by ngraham into branch 'master'.

[effects/overview] Speed up animation

The current duration is 300ms, which is inappropriate for two reasons:

1. It's too slow
2. It doesn't match one of the standard durations. The effect should
   ideally use those durations directly, but if this is not possible
   for technical reasons, it should use the effective value of one of
   those durations. Units.longDuration is 200ms which is the most
   appropriate one to use here.

Therefore, change the animation duration from 300ms to 200ms to match
the standard Units.longDuration duration.
FIXED-IN: 5.23

M  +1    -1    src/effects/overview/overvieweffect.cpp
M  +1    -1    src/effects/overview/overvieweffect.h

https://invent.kde.org/plasma/kwin/commit/205fb923cb8e1cbc0d26edc5a2ce37784ac32b41